last step to prepare mongodb

--- a/_spec.yaml
+++ b/_spec.yaml
@@ -1,24 +1,24 @@
-регистрация аккаунтов:
-  кол-во          //количество адресов кторое нужно
-  возвращает массив из адресов
+регистрация аккаунтов: +endpoint, +simple release, demo release
+  принимает: кол-во          //количество адресов которые нужны
+  возвращает: массив из адресов
 
-эмиссия:
-  аккаунт
-  кол-во
-  возвращает  true or false
+эмиссия:    +endpoint, +simple release, demo release
+  принимает: аккаунт
+  принимает: кол-во
+  возвращает:  true or false
 
-транзакция:
-  откого:
-  кому:
-  кол-во
-  возвращает  json {
+транзакция:    +endpoint, +simple release, demo release
+  принимает: откого
+  принимает: кому
+  принимает: кол-во
+  возвращает:  json {
     status: true or false,
     transactionID: integer
   }
 
-проверка баланса:   +endpoint, simple release
-  адрес
-  возвращает целое число или false
+проверка баланса:    +endpoint, +simple release, demo release
+  принимает: адрес
+  возвращает: целое число или false
   
 
 
