small codereview and more MVC-comptble code, also HOLDER API realiesedd

--- a/_spec.yaml
+++ b/_spec.yaml
@@ -21,4 +21,7 @@
   возвращает: целое число или false
   
 
+проверка условий для API то есть надо чтобы поля совподали с тем что ожидается 
 
+простой сет и гет в монго
+ ми им  хжз 
