transactions getting ready

--- a/_spec.yaml
+++ b/_spec.yaml
@@ -1,4 +1,4 @@
-регистрация аккаунтов: +endpoint, +simple release, demo release
+1регистрация аккаунтов: +endpoint, +simple release, demo release
   принимает: кол-во          //количество адресов которые нужны
   возвращает: массив из адресов
 
@@ -16,12 +16,20 @@
     transactionID: integer
   }
 
-проверка баланса:    +endpoint, +simple release, demo release
+проверка баланса:    +endpoint, +simple release, +demo release
   принимает: адрес
   возвращает: целое число или false
   
 
 проверка условий для API то есть надо чтобы поля совподали с тем что ожидается 
 
-простой сет и гет в монго
- ми им  хжз 
+
+при покупке рахматов {
+    вызываем функцию по увеличении эмиссии и
+    вызываем функцию перевода
+    }
+
+
+вообще в начале нужно запускать инициализатор {
+    объем эмиссии
+    }
