transaction done but not yel all

--- a/_spec.yaml
+++ b/_spec.yaml
@@ -20,7 +20,6 @@
   принимает: адрес
   возвращает: целое число или false
   
-
 проверка условий для API то есть надо чтобы поля совподали с тем что ожидается 
 
 
@@ -31,5 +30,5 @@
 
 
 вообще в начале нужно запускать инициализатор {
-    объем эмиссии
+    объем эмиссии с неизменяемой велечиной
     }
