init pusher module for fron-end

--- a/_spec.yaml
+++ b/_spec.yaml
@@ -33,3 +33,10 @@
 вообще в начале нужно запускать инициализатор {
     объем эмиссии с неизменяемой величиной
     }
+
+
+
+задачи для фронта:
+  страница держателя бонусов
+  страница партнера участника
+  панель с логами  другой инфой
