--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "json-stringify-safe": "^5.0.1",
     "mongodb": "^3.1.6",
-    "mongoose": "^5.3.0"
+    "mongoose": "^5.3.0",
+    "pusher": "^2.1.3"
   }
 }
