continue to backend

--- a/docs/_spec.yaml
+++ b/docs/_spec.yaml
@@ -40,3 +40,15 @@
   страница держателя бонусов
   страница партнера участника
   панель с логами  другой инфой
+  чат с использованием pusher chatkit
+  добавить аналитику через pusher
+
+
+внешний вид мобильного приложения: 
+  ключевые слова для знака rahmat:
+    handshake, like, 'medium clap animation'
+
+
+задачи на сегодня:
+  pusher отправка при изменении баланса или при проведении транзакции
+  сохранение collection в блокчейне в блокчейне
