prepare to store on blockchain

--- a/docs/_spec.yaml
+++ b/docs/_spec.yaml
@@ -34,7 +34,10 @@
     объем эмиссии с неизменяемой величиной
     }
 
-
+увидомления:
+  используем Pusher-js
+  посмотреть на паттерны Observer
+  посмотреть на паттерны Publisher/Subscribers
 
 задачи для фронта:
   страница держателя бонусов
