--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-stringify-safe": "^5.0.1",
     "mongodb": "^3.1.6",
     "mongoose": "^5.3.0",
-    "pusher": "^2.1.3"
+    "pusher": "^2.1.3",
+    "web3": "^1.0.0-beta.36"
   }
 }
