--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-util": "^6.0.0",
     "express": "^4.16.3",
     "json-stringify-safe": "^5.0.1",
     "mongodb": "^3.1.6",
