--- a/docs/_spec.yaml
+++ b/docs/_spec.yaml
@@ -54,4 +54,4 @@
 
 задачи на сегодня:
   pusher отправка при изменении баланса или при проведении транзакции
-  сохранение collection в блокчейне в блокчейне
+  сохранение collection в блокчейне
