--- a/docs/_spec.yaml
+++ b/docs/_spec.yaml
@@ -20,13 +20,25 @@
 проверка баланса:    +endpoint, +simple release, +demo release
   принимает: адрес
   возвращает: целое число или false
+
+простые транзакции(0.01 процент):   endpoint,  demo release
+
+благотворительные транзакции(0.05 процент):   endpoint, demo release
+
+транзакция обсл.персоналу:    endpoint, demo release
+
+контроллер конвертации поинтов в уровни:    endpoint, demo release
+
+проверка статуса пользователя: endpoint, demo release
+
+
   
 проверка условий для API то есть надо чтобы поля совподали с тем что ожидается 
 
 
-при покупке рахматов {
-    вызываем функцию по увеличении эмиссии и
-    вызываем функцию перевода
+при конвентации рахматов в уровни {
+    вызываем функцию по переводу рахматов на архивный счет и
+    вызываем функцию увеличения уровня
     }
 
 
@@ -52,6 +64,6 @@
     handshake, like, 'medium clap animation'
 
 
-задачи на сегодня:
+задачи на после MVP:
   pusher отправка при изменении баланса или при проведении транзакции
   сохранение collection в блокчейне
