some unsaved files added

--- a/docs/_spec.yaml
+++ b/docs/_spec.yaml
@@ -3,7 +3,7 @@
   принимает: кол-во адресов         //количество адресов которые нужны
   возвращает: массив из адресов
 
-эмиссия пряма (RAW):    +endpoint, +simple release, demo release
+эмиссия:    +endpoint, +simple release, demo release
   принимает: аккаунт
   принимает: кол-во рахматов
   возвращает:  true or false
@@ -22,24 +22,12 @@
   возвращает: целое число или false
 
 простые транзакции(0.01 процент):   endpoint,  demo release
-    {
-      принимает: адрес
-      возвращает: целове число или false
-    }
 
-благотворительные транзакции(0.05 процент):   endpoint, demo release
-    {
-      принимает: адрес
-      возвращает: целове число или false
-    }
+благотворительные транзакции(0.05 процент ):   endpoint, demo release
 
 транзакция обсл.персоналу:    endpoint, demo release
 
 контроллер конвертации поинтов в уровни:    endpoint, demo release
-    при конвентации рахматов в уровни {
-    вызываем функцию по переводу рахматов на архивный счет и
-    вызываем функцию увеличения уровня
-    }
 
 проверка статуса пользователя: endpoint, demo release
 
@@ -47,6 +35,11 @@
   
 проверка условий для API то есть надо чтобы поля совподали с тем что ожидается 
 
+
+при конвентации рахматов в уровни {
+    вызываем функцию по переводу рахматов на архивный счет и
+    вызываем функцию увеличения уровня
+    }
 
 
 вообще в начале нужно запускать инициализатор {
