--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-stringify-safe": "^5.0.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
+    "morgan": "^1.9.1",
     "pusher": "^2.2.0",
     "uuid": "^3.3.2",
     "web3": "^1.0.0-beta.37"
