--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethereumjs-util": "^6.0.0",
     "express": "^4.16.4",
     "json-stringify-safe": "^5.0.1",
+    "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "morgan": "^1.9.1",
